Fix overflow issues

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 @media screen and (max-width: 900px) {
   .img {
     height: 20px;
